<resources>
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="username">username</string>
    <string name="sign_in">Sign-in</string>
    <string name="keep_me_signed_in">Remember me?</string>
    <string name="choose_role">Choose Role</string>
    <string name="sign_up">Sign-up</string>
    <string name="choose_image">Choose image</string>
    <string name="descreption">Descreption</string>
    <string name="find_gps">Find gps</string>
    <string name="write2">Submit</string>
    <string name="dangers_to_approve">Dangers To Approve</string>
    <string name="ongoing_dangers">OnGoing Dangers</string>
    <string name="you_are_logged_in_and_waiting_to_be_alerted">you are logged in and waiting to be alerted</string>
    <string name="dangertype">DangerType</string>
    <string name="description">Description</string>
    <string name="gps">Gps</string>
    <string name="date">Date</string>
    <string name="times_reported">Times Reported</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="sign_in2">Sign in</string>
    <string name="don_t_have_an_account_yet_create_one">Don\'t have an account yet? <u>Create one</u></string>
    <string name="sign_up2">Sign up</string>
    <string name="username2">username</string>
    <string name="button">Sign-up</string>
    <string name="choose_role2">Choose Role:</string>
    <string name="datetime">DateTime</string>
    <string name="choose_category">Choose category</string>
    <string name="description2">Description</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out2">Sign out</string>
    <string name="location">Location</string>
    <string name="show_statistics"><u>Show statistics</u></string>
    <string name="statistics">Statistics</string>
    <string name="reports_for_fires">Reports for Fires:</string>
    <string name="reports_for_floods">Reports for Floods:</string>
    <string name="reports_for_earthquakes">Reports for Earthquakes:</string>
    <string name="reports_for_tornados">Reports for Tornados:</string>
    <string name="reports_for_smokes">Reports for Ashes/Smokes:</string>
    <string name="reports_for_snow">Reports for Snow:</string>
    <string name="total_cases">Total cases:</string>
    <string name="message_for">Message_for </string>
    <string name="area"> area: </string>
    <string name="help_flood">If you find yourself in front of a flooded road, stop and change direction. Avoid standing water. Strictly limit movement and follow the instructions of the authorities. Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
    <string name="help_fire">If the fire is approaching your home Keep calm. Move all flammable materials from around the building to closed and protected areas. Close all passageways (chimneys, windows, doors, etc.)Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
    <string name="help_snow">Get to a safe place without being exposed to the blizzard. Dress in layers of light and warm clothing instead of a heavy garment. Prefer an outer garment. Wear warm waterproof boots. Strictly limit movement and follow the instructions of the authorities. Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
    <string name="help_earth">If you are indoors, evacuate the building from the stairwell. Take refuge in an open and safe area. Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
    <string name="help_tornado">As a precaution stay away from windows, corners, doors and exterior walls. Watch for flying debris. Sit on the floor next to an interior wall or under a heavy piece of furniture, such as a table. Limit movement drastically and follow the instructions of the authorities. Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
    <string name="help_ash">In the event that removal from the area is not possible, stay indoors as much as possible and keep indoor air as clean as possible. Strictly limit movement and follow the instructions of the authorities. Self-protection instructions:https://www.civilprotection.gr/el/entona-kairika-fainomena</string>
</resources>