<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#2ECFB0"
    android:padding="0dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/dangertype"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"

            android:padding="10dp"
            android:text="@string/description"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="-55dp"
            android:padding="10dp"
            android:text="@string/gps"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="DangerType"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="150dp"
            android:text="Description"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="-55dp"
            android:padding="10dp"
            android:text="Gps"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="Date"
            android:textColor="#000"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="@string/times_reported"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="Number"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="265dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="295dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/approve" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="345dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/delete_alert" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="295dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/disapprove" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>